# FlexStackBenchmarking

./: .env.example  .gitignore  README.md
.github/workflows/: build-rust.yml  release.yml
analysis/: analyze_results.py  generate_plots.py  requirements.txt
ansible/: fetch_results.yml  inventory.yml  run.yml  run_rx.yml  setup.yml
ansible/tasks/: run_cell.yml
python/: benchmark.py  generate_certs.py  requirements.txt
rust/: Cargo.toml
rust/src/: bench_cv2x.rs  main.rs
scripts/: prepare_system.sh  run_benchmarks.sh  run_benchmarks_cohda.sh  run_rx_benchmarks.sh  send_packets_for_rx_benchmarks.sh
