[package]
name = "flexstack-bench"
version = "0.2.1"
edition = "2021"
description = "Benchmark harness for RustFlexStack"

[[bin]]
name = "flexstack-bench"
path = "src/main.rs"

[[bin]]
name = "flexstack-bench-cv2x"
path = "src/bench_cv2x.rs"
required-features = ["cv2x"]

[features]
cv2x = ["rustflexstack/cv2x"]

[dependencies]
rustflexstack = "0.3.0"
clap = { version = "4", features = ["derive"] }
rasn = "0.26"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
